@@ -1,3 +1,8 @@
+2002-11-26	Jeff Schmidt <jschmidt@fnal.gov>
+
+		added init script
+
+
 2002-10-04  Christian Mertes <c_mertes@bigfoot.de>
 
 		- Updated version to 0.2.0
